--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-    "name": "Zaid-Userbot",
+    "name": "Zokazu-Userbot",
     "description": "A First Telegram Userbot Project With Multi Client Based On PyroGram!",
     "logo": "https://telegra.ph/file/9563b48195f2f1c62cc5e.jpg",
-    "repository": "https://github.com/Itz-Zaid/Zaid-Userbot",
+    "repository": "https://github.com/zokazu/Uboy-Pyro",
     "env": {
         "STRING_SESSION1": {
             "description": "pyrogram string session here",
